[i18n] Everything should now be translated, except contents of products, pages and blogs

--- a/theme/sections/newsletter.liquid
+++ b/theme/sections/newsletter.liquid
@@ -149,8 +149,8 @@
       },
       "de": {
         "title": "Entdecke Fassbenders Welt",
-        "content_html": "Ich möchte Neuigkeiten und Inspiration über Stories und Sammlungen erhalten. <br> Ich bin {{name}} und meine E-Mail lautet {{email}}.",
-        "checkbox_email": "Ja, ich möchte von euch per E-Mail informiert werden.",
+        "content_html": "Ich möchte News und Inspirationen über Stories und Kollektionen erhalten. <br> Ich bin {{name}} und meine E-Mail lautet {{email}}.",
+        "checkbox_email": "Ja, ich möchte von Fassbender per E-Mail informiert werden.",
         "checkbox_privacy_html": "Durch die Anmeldung akzeptiere ich eure <a href=\"/pages/legal-area\">Datenschutzerklärung</a>.",
         "form_invalid": "Bitte überprüfe deine Eingabe.",
         "button_subscribe_label": "Abonnieren",
