--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -167,7 +167,7 @@
             rv-route="link.url"
             rv-href="link.url"
           >
-            <span rv-i18n-text="link.title | handleize | prepend 'menus.'"></span>
+            <span rv-i18n-text="link.title | handleize | prepend 'menus.'">{link.title}</span>
           </a>
         </div>
       </nav>
@@ -195,7 +195,7 @@
             rv-route="link.url"
             rv-href="link.url"
           >
-            <span rv-i18n-text="link.title | handleize | prepend 'menus.'"></span>
+            <span rv-i18n-text="link.title | handleize | prepend 'menus.'">{link.title}</span>
           </a>
         </div>
       </nav>
