--- a/theme/templates/customers/reset_password.liquid
+++ b/theme/templates/customers/reset_password.liquid
@@ -6,25 +6,31 @@
           <div class="form-vertical">
             {% form 'reset_customer_password' %}
 
-              <strong>{{ 'customer.reset_password.title' | t }}</strong>
+              <strong rv-i18n-text="'customer.reset_password.title'">{{'customer.reset_password.title'|t}}</strong>
 
-              <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
+              <p rv-i18n-text="'customer.reset_password.subtext'">{{'customer.reset_password.subtext' | t: email: email }}</p>
 
               {% comment %} Error and Successfull messages {% endcomment %}
               {% if form.errors %}
                 {% assign formErrors = form.errors %}
               {% endif %}
               {% if form.posted_successfully? %}
-                {% assign formSuccessfully = 'Password successfully resetted' %}
+                {% assign formSuccessfully = true %}
               {% endif %}
 
               <div class="form-group input-group mb-0">
-                <label for="ResetUsername" class="sr-only">Username</label>
+                <label for="ResetUsername" class="sr-only"
+                  rv-i18n-text="'customer.reset_password.mail'"
+                >
+                  {{'customer.reset_password.mail'|t}}
+                </label>
                 <input
                   type="text"
                   name="customer[email]"
                   id="ResetUsername"
                   class="form-control form-control-text form-control-primary py-1"
+                  rv-i18n-placeholder="'customer.reset_password.mail'"
+                  placeholder="{{'customer.reset_password.mail'|t}}"
                   value="{{ email }}"
                   autocomplete="username"
                   disabled
@@ -32,35 +38,47 @@
               </div>
 
               <div class="form-group input-group mb-0">
-                <label for="ResetPassword" class="sr-only">{{ 'customer.reset_password.password' | t }}</label>
+                <label for="ResetPassword" class="sr-only"
+                  rv-i18n-text="'customer.reset_password.password'"
+                >
+                  {{'customer.reset_password.password'|t}}
+                </label>
                 <input
                   type="password"
                   value=""
                   name="customer[password]"
                   id="ResetPassword"
                   class="form-control form-control-text form-control-primary py-1 {% if form.errors contains 'password' %}is-invalid{% endif %}"
-                  placeholder="{{ 'customer.reset_password.password' | t }}"
+                  rv-i18n-placeholder="'customer.reset_password.password'"
+                  placeholder="{{'customer.reset_password.password'|t}}"
                   autocomplete="new-password"
                   required
                 >
               </div>
 
               <div class="form-group input-group mb-5">
-                <label for="PasswordConfirmation" class="sr-only">{{ 'customer.reset_password.password_confirm' | t }}</label>
+                <label for="PasswordConfirmation" class="sr-only"
+                  rv-i18n-text="'customer.reset_password.password_confirm'"
+                >
+                  {{'customer.reset_password.password_confirm'|t}}
+                </label>
                 <input
                   type="password"
                   value=""
                   name="customer[password_confirmation]"
                   id="PasswordConfirmation"
                   class="form-control form-control-text form-control-primary py-1 {% if form.errors contains 'password_confirmation' %}is-invalid{% endif %}"
-                  placeholder="{{ 'customer.reset_password.password_confirm' | t }}"
+                  rv-i18n-placeholder="'customer.reset_password.password_confirm'"
+                  placeholder="{{'customer.reset_password.password_confirm'|t}}"
                   autocomplete="new-password"
                   required
                 >
               </div>
 
-              <button type="submit" class="btn btn-animated-underline-dark font-weight-bold px-0">
-                {{ 'customer.reset_password.submit' | t }}
+              <button type="submit" class="btn btn-animated-underline-dark font-weight-bold px-0"
+                rv-i18n-text="'customer.reset_password.submit'"
+              >
+                {{'customer.reset_password.submit'|t}}
               </button>
 
             {% endform %}
