--- a/theme/templates/page.cookies.liquid
+++ b/theme/templates/page.cookies.liquid
@@ -7,213 +7,214 @@
     {% endunless %}
 
     <div class="col-12 col-md-8 offset-md-2 col-lg-8 col-xl-6">
-      <h2>Cookies we use</h2>
-      <p>
-        To power up our online store we place the following cookies
+      <h2 rv-i18n-text="'cookies.title'">{{'cookies.title'|t}}</h2>
+      <p rv-i18n-text="'cookies.subtitle'">
+        {{'cookies.subtitle'|t}}
       </p>
-      <h3>Cookies Necessary for the Functioning of the Store</h3>
+      <h3 rv-i18n-text="'cookies.store.title'">{{'cookies.store.title'|t}}</h3>
       <table class="table table-borderless">
         <tbody>
-        </tbody><thead>
-        <tr><th>Cookie Name</th>
-        <th>Description</th>
-        </tr></thead>
+        </tbody>
+        <thead>
+          <tr>
+            <th rv-i18n-text="'cookies.table_name'">{{'cookies.table_name'|t}}</th>
+            <th rv-i18n-text="'cookies.table_description'">{{'cookies.table_description'|t}}</th>
+          </tr>
+        </thead>
         <tbody><tr>
         <td><code><span>_ab</span></code></td>
-        <td>Used in connection with access to admin.</td>
+        <td rv-i18n-text="'cookies.store._ab'">{{'cookies.store._ab'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_orig_referrer</span></code></td>
-        <td>Used in connection with shopping cart.</td>
+        <td rv-i18n-text="'cookies.store._orig_referrer'">{{'cookies.store._orig_referrer'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_secure_session_id</span></code></td>
-        <td>Used in connection with navigation through a storefront.</td>
+        <td rv-i18n-text="'cookies.store._secure_session_id'">{{'cookies.store._secure_session_id'|t}}</td>
         </tr>
         <tr>
         <td><code><span>Cart</span></code></td>
-        <td>Used in connection with shopping cart.</td>
+        <td rv-i18n-text="'cookies.store.Cart'">{{'cookies.store.Cart'|t}}</td>
         </tr>
         <tr>
         <td><code><span>cart_sig</span></code></td>
-        <td>Used in connection with checkout.</td>
+        <td rv-i18n-text="'cookies.store.cart_sig'">{{'cookies.store.cart_sig'|t}}</td>
         </tr>
         <tr>
         <td><code><span>cart_ts</span></code></td>
-        <td>Used in connection with checkout.</td>
+        <td rv-i18n-text="'cookies.store.cart_ts'">{{'cookies.store.cart_ts'|t}}</td>
         </tr>
         <tr>
         <td><code><span>checkout_token</span></code></td>
-        <td>Used in connection with checkout.</td>
+        <td rv-i18n-text="'cookies.store.checkout_token'">{{'cookies.store.checkout_token'|t}}</td>
         </tr>
         <tr>
         <td><code><span>Secret</span></code></td>
-        <td>Used in connection with checkout.</td>
+        <td rv-i18n-text="'cookies.store.Secret'">{{'cookies.store.Secret'|t}}</td>
         </tr>
         <tr>
         <td><code><span>Secure_customer_sig</span></code></td>
-        <td>Used in connection with customer login.</td>
+        <td rv-i18n-text="'cookies.store.Secure_customer_sig'">{{'cookies.store.Secure_customer_sig'|t}}</td>
         </tr>
         <tr>
         <td><code><span>storefront_digest</span></code></td>
-        <td>Used in connection with customer login.</td>
+        <td rv-i18n-text="'cookies.store.storefront_digest'">{{'cookies.store.storefront_digest'|t}}</td>
         </tr>
         </tbody>
       </table>
 
-      <h3>Reporting and Analytics by Shopify</h3>
+      <h3 rv-i18n-text="'cookies.shopify_analytics.title'">{{'cookies.shopify_analytics.title'|t}}</h3>
       <table class="table table-borderless">
         <tbody></tbody>
         <thead>
-          <tr><th>Cookie Name</th>
-          <th>Description</th>
+          <tr>
+            <th rv-i18n-text="'cookies.table_name'">{{'cookies.table_name'|t}}</th>
+            <th rv-i18n-text="'cookies.table_description'">{{'cookies.table_description'|t}}</th>
           </tr>
         </thead>
         <tbody><tr>
         <td><code><span>_landing_page</span></code></td>
-        <td>Track landing pages.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._landing_page'">{{'cookies.shopify_analytics._landing_page'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_orig_referrer</span></code></td>
-        <td>Track landing pages.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._orig_referrer'">{{'cookies.shopify_analytics._orig_referrer'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_s</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._s'">{{'cookies.shopify_analytics._s'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_fs</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_fs'">{{'cookies.shopify_analytics._shopify_fs'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_s</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_s'">{{'cookies.shopify_analytics._shopify_s'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_sa_p</span></code></td>
-        <td>Shopify analytics relating to marketing &amp; referrals.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_sa_p'">{{'cookies.shopify_analytics._shopify_sa_p'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_sa_t</span></code></td>
-        <td>Shopify analytics relating to marketing &amp; referrals.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_sa_t'">{{'cookies.shopify_analytics._shopify_sa_t'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_uniq</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_uniq'">{{'cookies.shopify_analytics._shopify_uniq'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_visit</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_visit'">{{'cookies.shopify_analytics._shopify_visit'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_shopify_y</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._shopify_y'">{{'cookies.shopify_analytics._shopify_y'|t}}</td>
         </tr>
         <tr>
         <td><code><span>_y</span></code></td>
-        <td>Shopify analytics.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics._y'">{{'cookies.shopify_analytics._y'|t}}</td>
         </tr>
         <tr>
         <td><code><span>tracked_start_checkout</span></code></td>
-        <td>Shopify analytics relating to checkout.</td>
+        <td rv-i18n-text="'cookies.shopify_analytics.tracked_start_checkout'">{{'cookies.shopify_analytics.tracked_start_checkout'|t}}</td>
         </tr>
         </tbody>
       </table>
 
-      <h3>Google Analytics</h3>
+      <h3><td rv-i18n-text="'cookies.google_analytics.title'">{{'cookies.google_analytics.title'|t}}</td></h3>
       <table class="table table-borderless">
         <tbody>
-          <tr>
-            <th>Cookie Name</th>
-            <th>Description</th>
-          </tr>
+          <thead>
+            <tr>
+              <th rv-i18n-text="'cookies.table_name'">{{'cookies.table_name'|t}}</th>
+              <th rv-i18n-text="'cookies.table_description'">{{'cookies.table_description'|t}}</th>
+            </tr>
+          </thead>
           <tr>
             <td><code><span>_ga</span></code></td>
-            <td>Used to distinguish users.</td>
+            <td rv-i18n-text="'cookies.google_analytics._ga'">{{'cookies.google_analytics._ga'|t}}</td>
           </tr>
           <tr>
             <td><code><span>_gid</span></code></td>
-            <td>Used to distinguish users.</td>
+            <td rv-i18n-text="'cookies.google_analytics._gid'">{{'cookies.google_analytics._gid'|t}}</td>
           </tr>
           <tr>
             <td><code><span>_gat</span></code></td>
-            <td>Used to throttle request rate. If Google Analytics is deployed via Google Tag Manager, this
-              cookie will be named <code><span>_dc_gtm_&lt;property-id&gt;</span></code>.</td>
+            <td rv-i18n-html="'cookies.google_analytics._gat_html'">{{'cookies.google_analytics._gat_html'|t}}</td>
           </tr>
           <tr>
             <td><code><span>AMP_TOKEN</span></code></td>
-            <td>Contains a token that can be used to retrieve a Client ID from AMP Client ID service. Other
-              possible values indicate opt-out, inflight request or an error retrieving a Client ID from AMP
-              Client ID service.</td>
+            <td rv-i18n-text="'cookies.google_analytics.AMP_TOKEN'">{{'cookies.google_analytics.AMP_TOKEN'|t}}</td>
           </tr>
           <tr>
             <td><code><span>_gac_&lt;property-id&gt;</span></code></td>
-            <td>Contains campaign related information for the user. If you have
-              linked your Google Analytics and Google Ads accounts, Google Ads
-              website conversion tags will read this cookie unless you opt-out.
-              <a href="//support.google.com/google-ads/answer/7521212">Learn more</a>.
-            </td>
+            <td rv-i18n-html="'cookies.google_analytics._gac_property-id_html'">{{'cookies.google_analytics._gac_property-id_html'|t}}</td>
           </tr>
         </tbody>
       </table>
 
-      <h3>The Trade Desk</h3>
-      <p>
-        Informationen zur der von The Trade Desk verwendeten Technologie und zum Datenschutz finden Sie unter folgendem Link: <a href="http://thetradedesk.com/general/privacy-policy">http://thetradedesk.com/general/privacy-policy</a>        
+      <h3 rv-i18n-html="'cookies.ttd.title'">{{'cookies.ttd.title'|t}}</h3>
+      <p rv-i18n-html="'cookies.ttd.description_html'">
+        {{'cookies.ttd.description_html'|t}}
       </p>
-      <p>
-        Sie können der Datensammlung und -speicherung jederzeit mit Wirkung für die Zukunft unter nachstehendem Link widersprechen: <a href="http://www.adsrvr.org/">http://www.adsrvr.org/</a>
-      </p>
+
       <table class="table table-borderless">
         <tbody>
-          <tr>
-            <th>Cookie Name</th>
-            <th>Domain</th>
-            <th>Description</th>
-          </tr>
+          <thead>
+            <tr>
+              <th rv-i18n-text="'cookies.table_name'">{{'cookies.table_name'|t}}</th>
+              <th rv-i18n-text="'cookies.table_domain'">{{'cookies.table_domain'|t}}</th>
+              <th rv-i18n-text="'cookies.table_description'">{{'cookies.table_description'|t}}</th>
+            </tr>
+          </thead>
           <tr>
             <td><code><span>TDID</span></code></td>
             <td>.adsrvr.org</td>
-            <td>The Trade Desk analytics.</td>
+            <td rv-i18n-text="'cookies.ttd.TDID'">{{'cookies.ttd.TDID'|t}}</td>
           </tr>
           <tr>
             <td><code><span>TDCPM</span></code></td>
             <td>.adsrvr.org</td>
-            <td>The Trade Desk analytics.</td>
+            <td rv-i18n-text="'cookies.ttd.TDCPM'">{{'cookies.ttd.TDCPM'|t}}</td>
           </tr>
           <tr>
             <td><code><span>TTDOptOut</span></code></td>
             <td>.adsrvr.org</td>
-            <td>The Trade Desk analytics.</td>
+            <td rv-i18n-text="'cookies.ttd.TTDOptOut'">{{'cookies.ttd.TTDOptOut'|t}}</td>
           </tr>          
         </tbody>
       </table>
 
-      <h3>Privacy Settings</h3>
-      <p>
-        To save your privacy settings we use the following cookies
+      <h3 rv-i18n-text="'cookies.privacy.title'">{{'cookies.privacy.title'|t}}</h3>
+      <p rv-i18n-html="'cookies.privacy.description_html'">
+        {{'cookies.privacy.description_html'|t}}
       </p>
       <table class="table table-borderless">
         <tbody>
-          <tr>
-            <th>Cookie Name</th>
-            <th>Description</th>
-          </tr>
+          <thead>
+            <tr>
+              <th rv-i18n-text="'cookies.table_name'">{{'cookies.table_name'|t}}</th>
+              <th rv-i18n-text="'cookies.table_description'">{{'cookies.table_description'|t}}</th>
+            </tr>
+          </thead>
           <tr>
             <td><code><span>cookieconsent_accepted</span></code></td>
-            <td>If you agree with our cookie notice this will be saved so we do not to show you the notice again.</td>
+            <td rv-i18n-text="'cookies.privacy.cookieconsent_accepted'">{{'cookies.privacy.cookieconsent_accepted'|t}}</td>
           </tr>
           <tr>
             <td><code><span>ga-disable-UA-126476233-1</span></code></td>
-            <td>Used to save the setting that you do not want tracking with Google Analytics.</td>
+            <td rv-i18n-text="'cookies.privacy.ga-disable-UA-126476233-1'">{{'cookies.privacy.ga-disable-UA-126476233-1'|t}}</td>
           </tr>
           <tr>
             <td><code><span>TTDOptOut</span></code></td>
-            <td>Used to save the setting that you do not want tracking with The Trade Desk.</td>
+            <td rv-i18n-text="'cookies.privacy.TTDOptOut'">{{'cookies.privacy.TTDOptOut'|t}}</td>
           </tr>
           <tr>
             <td><code><span>fb-pixel-is-disabled</span></code></td>
-            <td>Used to save the setting that you do not want tracking with Facebook Pixel.</td>
+            <td rv-i18n-text="'cookies.privacy.fb-pixel-is-disabled'">{{'cookies.privacy.fb-pixel-is-disabled'|t}}</td>
           </tr>
           
         </tbody>
