--- a/theme/templates/page.legals.liquid
+++ b/theme/templates/page.legals.liquid
@@ -5,6 +5,10 @@
         {{ page.content }}
         </div>
     {% endunless %}
+    <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
+      <p><strong rv-i18n-text="'menus.crafter'">{{'menus.crafter'|t}}</strong></p>
+      <p rv-i18n-html="'snippets.footer.crafter_html'">{{'snippets.footer.crafter_html'|t}}</p>
+    </div>
   </div>
 </div>
 
