--- a/src/ts/components/shopify-linklist/shopify-linklist.component.html
+++ b/src/ts/components/shopify-linklist/shopify-linklist.component.html
@@ -7,7 +7,7 @@
       rv-route="link.url"
       rv-href="link.url"
       >
-      <span rv-i18n-text="link.title | handleize | prepend 'menus.'"></span>
+      <span rv-i18n-text="link.title | handleize | prepend 'menus.'">{link.title}</span>
     </a>
     <div class="nav-item" rv-each-sublink="link.links">
       <a
@@ -17,7 +17,7 @@
         rv-route="sublink.url"
         rv-href="sublink.url"
       >
-      <span rv-i18n-text="sublink.title | handleize | prepend 'menus.'"></span>
+      <span rv-i18n-text="sublink.title | handleize | prepend 'menus.'">{sublink.title}</span>
     </a>
     </div>
   </div>
