--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -1,8 +1,10 @@
+{% include 'jumplink-utils-translate', translate: page.title, path: 'titles' %}
+
 <div class="container-fluid pt-5">
   <div class="row pt-md-5">
-    {% unless page.title == blank %}
+    {% unless translated == blank %}
       <div class="col-12 col-md-8 offset-md-2 col-lg-6">
-        <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
+        <h1 class="page-title mt-0 mb-4">{{ translated }}</h1>
       </div>
     {% endunless %}
 
