--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,10 +1,12 @@
+{% include 'jumplink-utils-translate', translate: page.title, path: 'titles' %}
+
 <div class="container-fluid pt-5">
   <div class="row pt-md-5">
     <div class="col-12 col-md-8 offset-md-2 col-lg-6">
       <div class="row">
         <div class="col-12">
-          {% unless page.title == blank %}
-            <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
+          {% unless translated == blank %}
+            <h1 class="page-title mt-0 mb-4">{{ translated }}</h1>
           {% endunless %}
           {% unless page.content == blank %}
             <div class="rte">
