--- a/theme/templates/page.returns.liquid
+++ b/theme/templates/page.returns.liquid
@@ -6,9 +6,7 @@
         </div>
     {% endunless %}
     <div class="col-12 col-md-8 offset-md-2 col-lg-6">
-      <p>
-        Please note that for deliveries outside of EU, you may be charged extra expenses including any import duties and taxes, and you will be responsible for these charges or fees imposed by the customs authorities of the destination country.
-      </p>
+      <p rv-i18n-html="'return.shipping_note'">{{'return.shipping_note'|t}}</p>
     </div>
   </div>
 </div>
