--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -93,7 +93,7 @@
         </div>
         <div class="row justify-content-center text-center">
           <div class="form-inline">
-            <label class="m-0" for="quanity">Quantity</label>
+            <label class="m-0" for="quanity" rv-i18n-text="'products.quantity'">{{'products.quantity'|t}}</label>
             {% comment %} <strong class="mx-1" contenteditable="true" rv-value="quantity | strip_html | number 1" rv-on-keydown="onQuantityKeypress"></strong> {% endcomment %}
             <input type="number" min="0" step="1" class="form-control bg-transparent border-0" id="quanity" rv-value="quantity | strip_html | number 1" style="width: 70px; font-weight: bold;">
           </div>
@@ -120,15 +120,27 @@
           {% comment %} Desktop: Show Menu Button {% endcomment %}
           <div class="col-12 d-flex justify-content-end align-self-end mb-3" rv-hide="showDetailMenu">
             <div class="btn-wrapper">
-              <button class="btn btn-animated-underline-dark" rv-on-click="toggleDetailMenu">Add</button>
+              <button class="btn btn-animated-underline-dark" rv-on-click="toggleDetailMenu"
+                rv-i18n-text="'products.add'"
+              >
+                {{'products.add'|t}}
+              </button>
             </div>
           </div>
 
           <div class="col-12 d-flex justify-content-end align-self-end mb-3" rv-show="showDetailMenu">
             <div class="btn-wrapper">
               <button class="btn btn-animated-underline-dark" rv-enabled="available" rv-on-click="addToCart">
-                <span rv-show="variant.available">Add</span>
-                <span rv-hide="variant.available">Sold Out</span>
+                <span rv-show="variant.available"
+                  rv-i18n-text="'products.add'"
+                >
+                  {{'products.add'|t}}
+                </span>
+                <span rv-hide="variant.available"
+                  rv-i18n-text="'products.sold_out'"
+                >
+                  {{'products.sold_out'|t}}
+                </span>
               </button>
             </div>
           </div>
@@ -149,8 +161,9 @@
             role="tab"
             aria-controls="tab-content-description"
             aria-selected="false"
+            rv-i18n-text="'products.tabs.description'"
           >
-            Description
+            {{'products.tabs.description'|t}}
           </a>
         {% endif %}
         
@@ -159,6 +172,7 @@
           {% assign tabTitleIndex = "tab-" | append: forloop.index | append: "-title" %}
           {% assign tabTitle = product.metafields["global"][tabTitleIndex] %}
           {% if tabTitle != blank %}
+            {% include 'jumplink-utils-translate', translate: tabTitle, path: 'products.tabs' %}
             <a
               class="nav-item nav-link d-inline-block text-truncate"
               href="#tab-content-{{ tabTitle | handleize }}"
@@ -167,7 +181,7 @@
               aria-controls="tab-content-{{ tabTitle | handleize }}"
               aria-selected="false"
             >
-              {{ tabTitle }}
+              {{ translated }}
             </a>
           {% endif %}
         {% endfor %}
@@ -175,6 +189,7 @@
         {% for i in (1..6) %}
           {% assign tabIndex = "tab-static-" | append: forloop.index | append: ".tab-sta" %}
           {% assign tabTitle = product.metafields[tabIndex]["tab-static-title"] %}
+          {% include 'jumplink-utils-translate', translate: tabTitle, path: 'products.tabs' %}
           {% if tabTitle != blank %}
             <a
               class="nav-item nav-link"
@@ -184,7 +199,7 @@
               aria-controls="tab-content-{{ tabTitle | handleize }}"
               aria-selected="false"
             >
-              {{ tabTitle }}
+              {{ translated }}
             </a>
           {% endif %}
         {% endfor %}
