[Layout] Fix smartpone with more than 100vw

--- a/theme/sections/newsletter.liquid
+++ b/theme/sections/newsletter.liquid
@@ -148,7 +148,7 @@
         "input_mail_label": "Mail"
       },
       "de": {
-        "title": "Entdecke Fassbenders Welt",
+        "title": "Entdecke Fassbender's Welt",
         "content_html": "Ich möchte News und Inspirationen über Stories und Kollektionen erhalten. <br> Ich bin {{name}} und meine E-Mail lautet {{email}}.",
         "checkbox_email": "Ja, ich möchte von Fassbender per E-Mail informiert werden.",
         "checkbox_privacy_html": "Durch die Anmeldung akzeptiere ich eure <a href=\"/pages/legal-area\">Datenschutzerklärung</a>.",
