--- a/theme/templates/page.newsletter.liquid
+++ b/theme/templates/page.newsletter.liquid
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
-  <div class="row pt-md-5">
+  <div class="row pt-md-5 scrollbar-x-auto">
     <div class="col-12">
       {% section 'newsletter' %}
     </div>
