--- a/theme/templates/page.returns-form.liquid
+++ b/theme/templates/page.returns-form.liquid
@@ -9,7 +9,7 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
   <div class="row pt-md-5">
     {% unless pageTitle == blank %}
-        <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
+        <div class="col-12 col-md-8 offset-md-2 col-lg-6 scrollbar-x-auto rte">
           <h2 rv-i18n-html="'{{pageTitleTransString}}'">{{ pageTitle }}</h2>
         </div>
     {% endunless %}
