--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -29,8 +29,14 @@
   }
 }
 
+.smartphone-menu-buttom {
+  width: 100vw;
+  margin: 0;
+}
+
 .fullscreen-menu {
   width: 100%;
+  max-width: 100vw;
   height: 100%;
   background-color: $dropdown-bg;
   backdrop-filter: blur(10px);
