--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -12,4 +12,5 @@
 @import './newsletter/newsletter.component';
 @import './instagram/instagram.component';
 @import './instagram-scrollbar/instagram-scrollbar.component';
+@import './i18n/switcher/switcher.component';
 @import './debug-bar/debug-bar.component';
