--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,7 +1,7 @@
 {% include 'jumplink-utils-translate', translate: page.title, path: 'titles' %}
 
 <div class="container-fluid pt-5">
-  <div class="row pt-md-5">
+  <div class="row pt-md-5 scrollbar-x-auto">
     <div class="col-12 col-md-8 offset-md-2 col-lg-6">
       <div class="row">
         <div class="col-12">
