--- a/theme/templates/page.returns.liquid
+++ b/theme/templates/page.returns.liquid
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
-  <div class="row pt-md-5">
+  <div class="row pt-md-5 scrollbar-x-auto">
     {% unless page.content == blank %}
         <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
           {{ page.content }}
